# mithril

./: .gitignore  context.md  package-lock.json  package.json  readme.md
backend/: pyproject.toml
backend/src/backend/: __init__.py  data.json  main.py  paper_storage.py  papers.py  run.py
backend/src/backend/client/: test.py
backend/src/backend/clients/: agiClient.py  data.json  data_pipeline.py
backend/src/backend/config/: .env
backend/src/backend/data/: publications_data.json  world_map_data.json
backend/src/backend/dataclass/: researchPapers.py
backend/src/backend/local_data/: arxiv.py  autonomous1.xml  autonomous10.xml  autonomous2.xml  autonomous3.xml  autonomous4.xml  autonomous5.xml  autonomous6.xml  autonomous7.xml  autonomous8.xml  autonomous9.xml  computer1.xml  computer2.xml  entry_1.xml  entry_2.xml  exoskeleton1.xml  exoskeleton2.xml  exoskeleton3.xml  exoskeleton4.xml  exoskeleton5.xml  exoskeleton6.xml  exoskeleton7.xml  exoskeleton8.xml  jamming1.xml  jamming10.xml  jamming11.xml  jamming12.xml  jamming13.xml  jamming14.xml  jamming15.xml  jamming2.xml  jamming3.xml  jamming4.xml  jamming5.xml  jamming6.xml  jamming7.xml  jamming8.xml  jamming9.xml  nuclear1.xml  nuclear10.xml  (+23 more)
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: PaperDetails.tsx  PaperUpload.tsx  RiskAnalysis.tsx
frontend/src/data/: papers.ts  publications.ts  researchTopics.ts  world-countries.json  worldMap.ts  worldMapData.ts  worldTopology.ts
frontend/src/pages/: Dashboard.tsx  Papers.tsx
frontend/src/services/: api.ts
frontend/src/styles/: Dashboard.css  PaperDetails.css  PaperUpload.css  Papers.css  RiskAnalysis.css
frontend/src/types/: Paper.ts
