[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Andre Amor",email = "ramorSTEM2022@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pathlib>=1.0.1",
    "google-genai>=1.8.0",
    "google-generativeai>=0.8.4",
    "python-dotenv>=1.1.0"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
